# tesseract

./: CMakeLists.txt
.github/workflows/: cmake-unittest.yml  cmake-win64.yml  cmake.yml
src/api/: baseapi.cpp
src/ccutil/: ccutil.cpp
src/training/common/: errorcounter.cpp  trainingsampleset.cpp
src/training/unicharset/: unicharset_training_utils.cpp
unittest/: CMakeLists.txt  baseapi_test.cc  lstm_test.cc  paragraphs_test.cc  recodebeam_test.cc  tatweel_test.cc  unicharcompress_test.cc
